src/test/deca/context/invalid/SansObjet/DeclVar-NOT-boolean-int.deca
// Description:
//    Declaration of a boolean variable using ! operation on a int variable .
// 
// Results:
//     Contextual error
//     Line 13: (RULE 3.37) Illegal operand type..
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  2; 
    boolean z = !2 ; 
}
